k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conote
  annotations:
    dev.okteto.com/generate-host: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api
            backend:
              serviceName: backend
              servicePort: 8080
          - path: /
            backend:
              serviceName: frontend
              servicePort: 80
